--- a/app/_styles/global.css
+++ b/app/_styles/global.css
@@ -1,4 +1,3 @@
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,6 +24,8 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+	max-width: 600px;
+	margin:0 auto;
 	line-height: 1;
 }
 ol, ul {
