--- a/app/_styles/global.css
+++ b/app/_styles/global.css
@@ -1,3 +1,9 @@
+* {
+	font-family: 'Pretendard Variable', Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
+		'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji',
+		'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -21,13 +27,15 @@ time, mark, audio, video {
 	border: 0;
 }
 
-/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 
 body {
+	margin: 0 auto;
+	max-width: 23.4rem;
+	min-height: 100dvh;
 	line-height: 1;
 }
 
@@ -39,8 +47,8 @@ blockquote, q {
 	quotes: none;
 }
 
-blockquote::before, blockquote::after,
-q::before, q::after {
+blockquote:before, blockquote:after,
+q:before, q:after {
 	content: '';
 	content: none;
 }
@@ -48,4 +56,21 @@ q::before, q::after {
 table {
 	border-spacing: 0;
 	border-collapse: collapse;
+}
+
+button,
+input {
+  background-color: transparent;
+  border: 0;
+}
+
+button:focus,
+input:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+a {
+	text-decoration: none;
+  background-color: transparent;
 }
