--- a/app/_styles/global.css
+++ b/app/_styles/global.css
@@ -70,6 +70,11 @@ input:focus {
   box-shadow: none;
 }
 
+button {
+	padding: 0;
+	cursor: pointer;
+}
+
 a {
 	text-decoration: none;
   background-color: transparent;
